--- a/style.css
+++ b/style.css
@@ -1,19 +1,18 @@
 html {
     width: 100%;
-    height: 100vh;
+    height: 100%;
     margin: 0;
 }
 
 body {
     margin: 0;
     width: 100%;
-    height: 100%;
+    height: max-content;
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-   
 }
 
 .body_wrapper {
@@ -22,10 +21,8 @@ body {
 }
 
 .main {
-    width: 1080px;
     height: 100%;
     box-shadow: 0 0 40px #4a4343;
-    margin: 0 auto;
 }
 
 .main_info {
@@ -53,6 +50,9 @@ body {
     width: 230px;
     height: 230px;
     background-color: #f0f8ff;
+    background-image: url('./assets/me.JPG');
+    background-size: contain;
+    background-repeat: no-repeat;
 }
 
 .my_contacts {
@@ -107,6 +107,9 @@ a:hover {
 }
 
 .mail-icon {
+    width: 25px;
+    height: 15px;
+    margin-right: 5px;
     background-image: url('./assets/mail.png');
 }
 
@@ -125,4 +128,51 @@ a:hover {
     font-weight: 700;
     color: #f0f8ff;
     text-transform: uppercase;
+}
+
+.section {
+    box-sizing: border-box;
+    width: 1080px;
+    padding: 0 60px;
+}
+
+h2 {
+    font-size: 2.2rem;
+    font-weight: 700;
+    margin-bottom: 10px;
+}
+
+.skills_wrapper {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
+}
+
+.skill {
+    font-size: 1.4rem;
+    padding-bottom: 5px;
+}
+
+.education {
+    margin: 0;
+    font-size: 1.2rem;
+}
+
+.university {
+    font-weight: 700;
+    font-size: 1.4rem;
+}
+
+.education_wrapper {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.english_wrapper {
+    margin-right: 210px;
+}
+
+.courses_wrapper {
+    margin-right: 130px;
 }
