--- a/style.css
+++ b/style.css
@@ -177,6 +177,7 @@ a:hover {
     .my_photo {
         align-self: center;
         margin-bottom: 20px;
+        margin-top: 20px;
     }
 
     .my_contacts {
