--- a/style.css
+++ b/style.css
@@ -241,7 +241,7 @@ h2 {
 }
 
 .skill {
-    font-size: 1.4rem;
+    font-size: 1rem;
     padding-bottom: 5px;
 }
 
@@ -305,8 +305,12 @@ h2 {
         margin-right: 00px;
     }
 
+    .skills_wrapper {
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(8, 1fr);
+    }
+
     .skill {
-    font-size: 1rem;
     padding-bottom: 0px;
     }
 
